Scroll Animations On Mobile Fix #2.

--- a/style.css
+++ b/style.css
@@ -871,6 +871,12 @@ footer {
         transform: translateX(0);
         transition: all 0s;
     }
+
+    .show {
+        opacity: 1;
+        transform: translateX(0);
+        transition: all 0s;
+    }
 }
 
 @media (max-width: 599px) {
